[package]
name = "SmolECS"
version = "0.1.0"
authors = ["James <jamescarterbell@gmail.com>", "Blake <blakewy@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
SmolHBSECS = {path = "./SmolHBSECS"}
SmolCommon = {path = "./SmolCommon"}
rayon = "1.4.1"