[package]
name = "SmolARCECS"
version = "0.1.0"
authors = ["James <jamescarterbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
SmolCommon = {path = "../SmolCommon"}
hecs = "0.2.15"
rayon = "1.4.1"
parking_lot = "0.11.0"