[package]
name = "SmolCommon"
version = "0.1.0"
authors = ["James <jamescarterbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
SmolCommonMacros = {path="SmolCommonMacros"}
bit-vec = "0.6.2"
parking_lot = "0.11.0"